Fix background contrast by setting body color to white

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -5,7 +5,7 @@
 body {
   font-family: 'Open Sans';
   margin: 0;
-  background-color: #4d4e4f;
+  background-color: white;
   height: auto;
 }
 
@@ -108,6 +108,7 @@ h1 {
 
 .infoContainer-cardContainer-card-horizontal {
   width: 100%;
+  background-color: white;
   border: 1px solid black;
   display: flex;
   flex-direction: column;
@@ -133,7 +134,6 @@ h1 {
 }
 
 .sleep-cards-vertical {
-  background-color: #5BC8AC;
 }
 
 .card-today-hydration {
